; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/sbus/char/extr_bbc_i2c.c_bbc_i2c_getdev.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/sbus/char/extr_bbc_i2c.c_bbc_i2c_getdev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.of_device = type { i32 }
%struct.bbc_i2c_bus = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.of_device* }

@NUM_CHILDREN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.of_device* @bbc_i2c_getdev(%struct.bbc_i2c_bus* %0, i32 %1) #0 {
  %3 = alloca %struct.of_device*, align 8
  %4 = alloca %struct.bbc_i2c_bus*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.of_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.bbc_i2c_bus* %0, %struct.bbc_i2c_bus** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.of_device* null, %struct.of_device** %6, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %32, %2
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* @NUM_CHILDREN, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %35

13:                                               ; preds = %9
  %14 = load %struct.bbc_i2c_bus*, %struct.bbc_i2c_bus** %4, align 8
  %15 = getelementptr inbounds %struct.bbc_i2c_bus, %struct.bbc_i2c_bus* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = load i32, i32* %8, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load %struct.of_device*, %struct.of_device** %20, align 8
  store %struct.of_device* %21, %struct.of_device** %6, align 8
  %22 = icmp ne %struct.of_device* %21, null
  br i1 %22, label %24, label %23

23:                                               ; preds = %13
  br label %35

24:                                               ; preds = %13
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %5, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %24
  br label %36

29:                                               ; preds = %24
  store %struct.of_device* null, %struct.of_device** %6, align 8
  %30 = load i32, i32* %7, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %7, align 4
  br label %32

32:                                               ; preds = %29
  %33 = load i32, i32* %8, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %8, align 4
  br label %9

35:                                               ; preds = %23, %9
  br label %36

36:                                               ; preds = %35, %28
  %37 = load i32, i32* %7, align 4
  %38 = load i32, i32* %5, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %42

40:                                               ; preds = %36
  %41 = load %struct.of_device*, %struct.of_device** %6, align 8
  store %struct.of_device* %41, %struct.of_device** %3, align 8
  br label %43

42:                                               ; preds = %36
  store %struct.of_device* null, %struct.of_device** %3, align 8
  br label %43

43:                                               ; preds = %42, %40
  %44 = load %struct.of_device*, %struct.of_device** %3, align 8
  ret %struct.of_device* %44
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
